--- a/wally/app/src/main/res/layout/control_layout.xml
+++ b/wally/app/src/main/res/layout/control_layout.xml
@@ -6,14 +6,59 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <LinearLayout
+        android:id="@+id/getter_holder"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/select_device_refresh"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/select_device_list">
+
+        <TextView
+            android:id="@+id/getter_distancia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Dist: 0.0" />
+
+        <TextView
+            android:id="@+id/getter_temperatura"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Temp: 0.0" />
+
+        <TextView
+            android:id="@+id/getter_umidade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Umi: 0.0" />
+
+        <TextView
+            android:id="@+id/getter_luminosidade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Lum: 0.0" />
+
+    </LinearLayout>
+
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </WebView>
 
     <Button
         android:id="@+id/control_disconnect"
@@ -27,6 +72,37 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/webView"
+        app:layout_constraintVertical_bias="1" />
+
+    <Button
+        android:id="@+id/control_getter"
+        android:layout_width="98dp"
+        android:layout_height="41dp"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        android:src="@drawable/voltar"
+        android:text="@string/getter"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/webView"
+        app:layout_constraintVertical_bias="1" />
+
+    <Button
+        android:id="@+id/control_run"
+        android:layout_width="98dp"
+        android:layout_height="41dp"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        android:src="@drawable/voltar"
+        android:text="@string/run"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/webView"
         app:layout_constraintVertical_bias="1" />
