--- a/wally/app/src/main/res/layout/select_device_layout.xml
+++ b/wally/app/src/main/res/layout/select_device_layout.xml
@@ -8,10 +8,10 @@
 
     <ListView
         android:id="@+id/select_device_list"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="441dp"
+        android:layout_height="485dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@id/select_device_refresh"
-        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
