--- a/wally/app/src/main/res/layout/select_device_layout.xml
+++ b/wally/app/src/main/res/layout/select_device_layout.xml
@@ -6,19 +6,36 @@
     android:layout_height="match_parent"
     tools:context="com.tridivide.bluetoothtutorial.SelectDeviceActivity">
 
+    <TextView
+        android:id="@+id/textoinicial"
+        android:layout_width="329dp"
+        android:layout_height="63dp"
+        android:fontFamily="casual"
+        android:text="@string/texto_inicial"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/select_device_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/select_device_list"
-        android:layout_width="441dp"
-        android:layout_height="485dp"
+        android:layout_width="447dp"
+        android:layout_height="412dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@id/select_device_refresh"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-1dp" />
 
     <Button
         android:id="@+id/select_device_refresh"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="casual"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="20dp"
